fixed scrollbar

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 body, html {
     font-family: "Baloo";
     font-size: 17px;
-    padding: 0 8%;
+  
     margin: 0;
     height: 100vh;
     overflow: hidden;
@@ -75,7 +75,6 @@ body, html {
 
 ::-webkit-scrollbar {
     width: 6px;
-    background-color: #C8FF00;
 }
 
 ::-webkit-scrollbar-thumb {
